# wavepack

./: .gitignore  README.md  pyproject.toml  wip.ipynb
wavepack/: wavelet_packet.py
